--- a/NetEvent/Client/Pages/Administration/Events/Events.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Events.razor
@@ -11,7 +11,7 @@
 
 
 
-<MudPaper Class="d-flex align-stretch flex-wrap gap-4 ma-4" Elevation="0">
+<div class="d-flex align-stretch flex-wrap gap-4 ma-4">
 
     <MudButton Class="d-flex flex-grow-1 flex-column" Style="width: 200px; max-width: 300px;" Variant="Variant.Outlined" Color="Color.Primary" StartIcon="@Icons.Material.Outlined.Add" Href="@UrlHelper.GetEventLink("new")">@Localize["Administration.Events.Event.Create"]</MudButton>
 
@@ -53,7 +53,7 @@
             </MudCardActions>
         </MudCard>
     }
-</MudPaper>
+</div>
 
 
 
