--- a/NetEvent/Client/wwwroot/css/mud_customize.css
+++ b/NetEvent/Client/wwwroot/css/mud_customize.css
@@ -33,3 +33,8 @@
         width: 100%;
         height: 100%;
     }
+
+.mud-thememanager-color-picker .mud-paper, .mud-input {
+    color: inherit;
+    background: inherit;
+}
