--- a/NetEvent/Client/Shared/MainLayout.razor
+++ b/NetEvent/Client/Shared/MainLayout.razor
@@ -46,15 +46,23 @@
     }
 
     <MudMainContent>
-        <MudContainer MaxWidth="@(_DrawerVisible ? MaxWidth.False : MaxWidth.Large)">
+        <MudContainer MaxWidth="@(_DrawerVisible ? MaxWidth.False : MaxWidth.Large)" Class="@(_DrawerVisible ? "pa-0" : string.Empty)">
             @Body
         </MudContainer>
     </MudMainContent>
 
     <MudAppBar Bottom="true" Fixed="false" Color="Color.Primary" Elevation="1">
-        <MudText Typo="Typo.subtitle2">© @_OrganizationName @DateTime.Now.Year @Localize["Shared.MainLayout.AllRightsReserved"] </MudText>
-        <MudSpacer />
-        <MudText Typo="Typo.subtitle2">@Localize["Shared.MainLayout.PoweredBy"] <MudLink Color="@Color.Secondary" Target="_blank" Href="https://github.com/Lan2Play/NetEvent">NetEvent</MudLink></MudText>
+        <MudContainer MaxWidth="@(_DrawerVisible ? MaxWidth.False : MaxWidth.Large)">
+            <MudGrid>
+                <MudItem md="4">
+                    <MudText Typo="Typo.subtitle2">© @_OrganizationName @DateTime.Now.Year @Localize["Shared.MainLayout.AllRightsReserved"] </MudText>
+                </MudItem>
+                <MudItem md="4"></MudItem>
+                <MudItem md="4">
+                    <MudText Typo="Typo.subtitle2">@Localize["Shared.MainLayout.PoweredBy"] <MudLink Color="@Color.Secondary" Target="_blank" Href="https://github.com/Lan2Play/NetEvent">NetEvent</MudLink></MudText>
+                </MudItem>
+            </MudGrid>
+        </MudContainer>
     </MudAppBar>
 </MudLayout>
 
