--- a/NetEvent/Client/Pages/Administration/Events/Event.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Event.razor
@@ -26,7 +26,7 @@
     </div>
 
     <MudGrid>
-        <MudItem xs="12" lg="8">
+        <MudItem>
 
             <MudCard Class="ma-4">
                 <MudForm Model="@_Event" @ref="@_Form" Validation="@(_EventValidator.ValidateValue)" ValidationDelay="0">
