--- a/NetEvent/Client/Pages/Events/Event.razor
+++ b/NetEvent/Client/Pages/Events/Event.razor
@@ -18,8 +18,15 @@
     }
     else if (_Event != null)
     {
-        <MudText Typo="Typo.h3" Class="ma-4">@_Event.Name</MudText>
+        <div class="d-flex flex-row align-start">
+            <MudText Typo="Typo.h3" Class="ma-4 d-inline">@_Event.Name</MudText>
 
+            <AuthorizeView Policy="Admin.Events.Edit">
+                <Authorized>
+                    <MudButton Class="ma-4" Variant="Variant.Text" Color="Color.Primary" Href="@UrlHelper.GetEventLink(_Event.Id!)" StartIcon="@Icons.Material.Outlined.Edit" />
+                </Authorized>
+            </AuthorizeView>
+        </div>
         <MudText Typo="Typo.body2">@_Event.StartDate?.ToString("d", CultureInfo.CurrentUICulture) - @_Event.EndDate?.ToString("d", CultureInfo.CurrentUICulture)</MudText>
 
 
@@ -33,11 +40,6 @@
             <MudText Typo="Typo.body2">@((MarkupString)_Event.Description)</MudText>
         }
 
-        <AuthorizeView Policy="Admin.Events.Edit">
-            <Authorized>
-                <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@UrlHelper.GetEventLink(_Event.Id!)" StartIcon="@Icons.Material.Outlined.Edit">@Localize["Administration.Events.Event.Edit"]</MudButton>
-            </Authorized>
-        </AuthorizeView>
     }
     else
     {
