--- a/NetEvent/Client/Shared/NavigationBar.razor
+++ b/NetEvent/Client/Shared/NavigationBar.razor
@@ -21,17 +21,17 @@
 <AuthorizeView>
     <Authorized>
         <MudMenu Label="@Localize["Shared.NavigationBar.Hello", context.User.Identity?.Name!]" ActivationEvent="@MouseEvent.MouseOver" Variant="Variant.Text" AnchorOrigin="Origin.BottomRight" DisableElevation="true" Color="Color.Primary" EndIcon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary">
-            <MudMenuItem Href="profile/manage"><MudIcon Icon="@Icons.Material.Outlined.Person" /> @Localize["Shared.NavigationBar.Profile"]</MudMenuItem>
+            <MudMenuItem Href="profile/manage" Icon="@Icons.Material.Outlined.Person">@Localize["Shared.NavigationBar.Profile"]</MudMenuItem>
 
             <AuthorizeView Context="admin" Policy="Admin.*">
                 <Authorized Context="admin">
-                    <MudMenuItem Href="administration/dashboard"><MudIcon Icon="@Icons.Material.Outlined.AdminPanelSettings" /> @Localize["Shared.NavigationBar.Administration"]</MudMenuItem>
+                    <MudMenuItem Href="administration/dashboard" Icon="@Icons.Material.Outlined.AdminPanelSettings">@Localize["Shared.NavigationBar.Administration"]</MudMenuItem>
                 </Authorized>
             </AuthorizeView>
 
             <MudDivider />
 
-            <MudMenuItem OnClick="BeginSignOut"><MudIcon Icon="@Icons.Material.Outlined.Logout" /> @Localize["Shared.NavigationBar.Logout"]</MudMenuItem>
+            <MudMenuItem OnClick="BeginSignOut" Icon="@Icons.Material.Outlined.Logout">@Localize["Shared.NavigationBar.Logout"]</MudMenuItem>
         </MudMenu>
     </Authorized>
     <NotAuthorized>
