--- a/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/skin.css
+++ b/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/skin.css
@@ -1804,8 +1804,10 @@ body.tox-dialog__disable-scroll {
 }
 
 .tox .tox-edit-area__iframe {
-    background-color: var(--mud-palette-surface);
+    /*background-color: var(--mud-palette-surface);*/
     border: 0;
+    border-top-width: 1px;
+    border-top-style: solid;
     box-sizing: border-box;
     flex: 1;
     height: 100%;
@@ -1829,7 +1831,7 @@ body.tox-dialog__disable-scroll {
 }
 
 .tox:not(.tox-tinymce-inline) .tox-editor-header {
-    background-color: var(--mud-palette-surface);
+    /*background-color: var(--mud-palette-surface);*/
     border-bottom: none;
     box-shadow: 0 2px 2px -2px rgba(34, 47, 62, 0.1), 0 8px 8px -4px rgba(34, 47, 62, 0.07);
     padding: 4px 0;
@@ -2535,7 +2537,7 @@ body.tox-dialog__disable-scroll {
 
 .tox .tox-menubar {
     /*background: url("data:image/svg+xml;charset=utf8,%3Csvg height='39px' viewBox='0 0 40 39px' width='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='38px' width='100' height='1' fill='transparent'/%3E%3C/svg%3E") left 0 top 0 #fff;*/
-    background-color: var(--mud-palette-surface);
+    /*background-color: var(--mud-palette-surface);*/
     display: flex;
     flex: 0 0 auto;
     flex-shrink: 0;
@@ -3064,7 +3066,7 @@ body.tox-dialog__disable-scroll {
 
 .tox .tox-statusbar {
     align-items: center;
-    background-color: var(--mud-palette-surface);
+    /*background-color: var(--mud-palette-surface);*/
     border-top: 1px solid #e3e3e3;
     color: rgba(34, 47, 62, 0.7);
     display: flex;
@@ -3441,13 +3443,13 @@ body.tox-dialog__disable-scroll {
 }
 
 .tox .tox-toolbar-overlord {
-    background-color: var(--mud-palette-surface);
+    /*background-color: var(--mud-palette-surface);*/
 }
 
 .tox .tox-toolbar,
 .tox .tox-toolbar__primary,
 .tox .tox-toolbar__overflow {
-    background-color: var(--mud-palette-surface);
+    /*background-color: var(--mud-palette-surface);*/
     background-image: repeating-linear-gradient(#e3e3e3 0px 1px, transparent 1px 39px);
     background-position: center top 40px;
     background-repeat: no-repeat;
