--- a/NetEvent/Client/Pages/LegalNotice.razor
+++ b/NetEvent/Client/Pages/LegalNotice.razor
@@ -13,6 +13,6 @@
 }
 else
 {
-    <MudText Typo="Typo.h6">@((MarkupString)_LegalNotice)</MudText>
-    <MudText Typo="Typo.h6">@((MarkupString)_PrivacyPolicy)</MudText>
+    <MudText>@((MarkupString)_LegalNotice)</MudText>
+    <MudText>@((MarkupString)_PrivacyPolicy)</MudText>
 }
