--- a/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/content.inline.css
+++ b/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/content.inline.css
@@ -13,6 +13,7 @@
   user-select: all;
   width: 8px !important;
 }
+
 .mce-content-body .mce-item-anchor:not(:empty) {
   background-position-x: 2px;
   display: inline-block;
@@ -480,9 +481,15 @@ pre[class*="language-"] {
 .mce-content-body table[data-mce-selected] {
   outline: 3px solid #b4d7ff;
 }
+.mce-content-body hr {
+    background: var(--mud-palette-divider);
+    height: 1px;
+    margin: 2rem 0px;
+}
+
 .mce-content-body hr[data-mce-selected] {
-  outline: 3px solid #b4d7ff;
-  outline-offset: 1px;
+    outline: 3px solid #b4d7ff;
+    outline-offset: 1px;
 }
 .mce-content-body *[contentEditable=false] *[contentEditable=true]:focus {
   outline: 3px solid #b4d7ff;
