--- a/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/skin.css
+++ b/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/skin.css
@@ -1422,7 +1422,6 @@ button::-moz-focus-inner {
     align-items: center;
     background-color: var(--mud-palette-surface);
     border-bottom: none;
-    color: #222f3e;
     display: flex;
     font-size: 16px;
     justify-content: space-between;
@@ -1462,7 +1461,6 @@ button::-moz-focus-inner {
 }
 
 .tox .tox-dialog__body {
-    color: #222f3e;
     display: flex;
     flex: 1;
     font-size: 16px;
@@ -1498,7 +1496,6 @@ button::-moz-focus-inner {
 
 .tox .tox-dialog__body-nav-item {
     border-bottom: 2px solid transparent;
-    color: rgba(34, 47, 62, 0.7);
     display: inline-block;
     font-size: 14px;
     line-height: 1.3;
@@ -1512,8 +1509,8 @@ button::-moz-focus-inner {
     }
 
 .tox .tox-dialog__body-nav-item--active {
-    border-bottom: 2px solid #006ce7;
-    color: #006ce7;
+    color: var(--mud-palette-primary);
+    /*background-color: var(--mud-palette-primary-hover);*/
 }
 
 .tox .tox-dialog__body-content {
@@ -2012,15 +2009,21 @@ body.tox-dialog__disable-scroll {
 
 .tox .tox-label,
 .tox .tox-toolbar-label {
-    color: rgba(34, 47, 62, 0.7);
     display: block;
-    font-size: 14px;
+    font-size: 1rem;
     font-style: normal;
-    font-weight: normal;
-    line-height: 1.3;
+    font-weight: 400;
+    line-height: 18px;
     padding: 0 8px 0 0;
-    text-transform: none;
+    text-transform: var(--mud-typography-default-text-transform);
     white-space: nowrap;
+    letter-spacing: .00938em;
+    background-color: var(--mud-palette-surface);
+    transform: translate(14px,-6px) scale(.75);
+    transform-origin: top left;
+    padding: 0 5px !important;
+    position: absolute;
+    z-index: 100;
 }
 
 .tox .tox-toolbar-label {
@@ -2040,6 +2043,7 @@ body.tox-dialog__disable-scroll {
 .tox .tox-form__group {
     box-sizing: border-box;
     margin-bottom: 4px;
+    padding: 12px;
 }
 
 .tox .tox-form-group--maximize {
@@ -2124,13 +2128,13 @@ body.tox-dialog__disable-scroll {
     -moz-appearance: none;
     appearance: none;
     background-color: var(--mud-palette-surface);
-    border-color: #eeeeee;
+    border-color: var(--mud-palette-lines-inputs);
     border-radius: var(--mud-default-borderradius);
     border-style: solid;
     border-width: 1px;
     box-shadow: none;
     box-sizing: border-box;
-    color: #222f3e;
+    /*color: #222f3e;*/
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     font-size: 16px;
     line-height: 24px;
@@ -2153,9 +2157,9 @@ body.tox-dialog__disable-scroll {
     .tox .tox-listboxfield .tox-listbox--select:focus,
     .tox .tox-textarea:focus {
         background-color: var(--mud-palette-surface);
-        border-color: #006ce7;
-        box-shadow: 0 0 0 2px rgba(0, 108, 231, 0.25);
-        outline: none;
+        border-color: var(--mud-palette-primary);
+        border-width: 2px;
+        margin: -1px;
     }
 
 .tox .tox-toolbar-textfield {
