--- a/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/content.inline.css
+++ b/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/content.inline.css
@@ -78,21 +78,21 @@
  */
 code[class*="language-"],
 pre[class*="language-"] {
-  color: black;
-  background: none;
-  text-shadow: 0 1px white;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: 1em;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
-  -moz-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  hyphens: none;
+    /*color: black;*/ 
+    background: none;
+    text-shadow: 0 1px var(--mud-palette-background-grey);
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 1em;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    hyphens: none;
 }
 pre[class*="language-"]::-moz-selection,
 pre[class*="language-"] ::-moz-selection,
@@ -122,7 +122,7 @@ pre[class*="language-"] {
 }
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #f5f2f0;
+    background: var(--mud-palette-background-grey);
 }
 /* Inline code */
 :not(pre) > code[class*="language-"] {
