--- a/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/content.css
+++ b/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/content.css
@@ -137,7 +137,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-    background: #f5f2f0;
+    background: var(--mud-palette-background-grey);
 }
 /* Inline code */
 :not(pre) > code[class*="language-"] {
