--- a/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/skin.css
+++ b/NetEvent/Client/wwwroot/lib/tinymce/skins/ui/borderless/skin.css
@@ -644,8 +644,7 @@ button::-moz-focus-inner {
 
     .tox .tox-collection__item {
         align-items: center;
-        border-radius: var(--mud-default-borderradius);
-        color: #222f3e;
+        /*color: #222f3e;*/
         display: flex;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
@@ -669,11 +668,12 @@ button::-moz-focus-inner {
 
     .tox .tox-collection--list .tox-collection__item--enabled {
         background-color: var(--mud-palette-surface);
-        color: #222f3e;
+        /*color: #222f3e;*/
     }
 
     .tox .tox-collection--list .tox-collection__item--active {
-        background-color: #cce2fa;
+        background-color: var(--mud-palette-primary-hover) !important;
+        color: var(--mud-palette-primary) !important;
     }
 
     .tox .tox-collection--toolbar .tox-collection__item--enabled {
@@ -682,7 +682,8 @@ button::-moz-focus-inner {
     }
 
     .tox .tox-collection--toolbar .tox-collection__item--active {
-        background-color: #cce2fa;
+        background-color: var(--mud-palette-primary-hover) !important;
+        color: var(--mud-palette-primary) !important;
     }
 
     .tox .tox-collection--grid .tox-collection__item--enabled {
@@ -2251,7 +2252,7 @@ body.tox-dialog__disable-scroll {
         border-width: 1px;
         box-shadow: none;
         box-sizing: border-box;
-        color: #222f3e;
+        /*color: #222f3e;*/
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
         font-size: 16px;
         line-height: 24px;
@@ -2498,7 +2499,7 @@ body.tox-dialog__disable-scroll {
 }
 
     .tox .tox-menu {
-        background-color: #fff;
+        background-color: var(--mud-palette-surface);
         border: 1px solid transparent;
         border-radius: var(--mud-default-borderradius);
         box-shadow: 0 0 2px 0 rgba(34, 47, 62, 0.2), 0 4px 8px 0 rgba(34, 47, 62, 0.15);
@@ -2509,7 +2510,7 @@ body.tox-dialog__disable-scroll {
     }
 
         .tox .tox-menu.tox-collection.tox-collection--list {
-            padding: 0 4px;
+            /*padding: 0 4px;*/
         }
 
         .tox .tox-menu.tox-collection.tox-collection--toolbar {
@@ -3242,6 +3243,7 @@ body.tox-dialog__disable-scroll {
         border-width: 2px;
         border-color: var(--mud-palette-primary);
         box-shadow: none;
+        margin: 5px -1px 5px 0;
     }
 
     .tox .tox-tbtn:hover {
@@ -3256,10 +3258,10 @@ body.tox-dialog__disable-scroll {
         }
 
     .tox .tox-tbtn:active {
-        background: #a6ccf7;
-        border: 0;
+        /*background: #a6ccf7;*/
+        border-color: var(--mud-palette-primary);
         box-shadow: none;
-        color: #222f3e;
+        /*color: #222f3e;*/
     }
 
         .tox .tox-tbtn:active svg {
@@ -3305,7 +3307,7 @@ body.tox-dialog__disable-scroll {
     }
 
 .tox .tox-tbtn:focus:not(.tox-tbtn--disabled) {
-    color: #222f3e;
+    color: var(--mud-palette-text-primary);
 }
 
     .tox .tox-tbtn:focus:not(.tox-tbtn--disabled) svg {
@@ -3348,7 +3350,12 @@ body.tox-dialog__disable-scroll {
 }
 
 .tox .tox-tbtn--select {
-    margin: 6px 1px 5px 0;
+    margin: 5px 1px 3px 0;
+    padding: 0 4px;
+    width: auto;
+}
+.tox .tox-tbtn--select:focus {
+    margin: 5px 1px 4px -1px;
     padding: 0 4px;
     width: auto;
 }
@@ -3397,9 +3404,9 @@ body.tox-dialog__disable-scroll {
     }
 
     .tox .tox-split-button:focus {
-        background: #cce2fa;
+        background-color: var(--mud-palette-primary-hover) !important;
+        color: var(--mud-palette-primary) !important;
         box-shadow: none;
-        color: #222f3e;
     }
 
 /*  .tox .tox-split-button > * {
