--- a/NetEvent/Client/Components/Administration/SystemSettingControl.razor
+++ b/NetEvent/Client/Components/Administration/SystemSettingControl.razor
@@ -14,7 +14,7 @@
                 @if (svt.IsRichTextValue)
                 {
                     <MudField Label="@Localize[SystemSetting.LabelKey]" Margin="Margin.Dense" Variant="Variant.Outlined" HelperText="@(string.IsNullOrEmpty(SystemSetting.DescriptionKey) ? string.Empty : Localize[SystemSetting.DescriptionKey])">
-                        <MudText>
+                        <MudText Style="height: 500px; overflow-y: scroll;">
                             <Editor @bind-Value="SettingValue" Inline="true" ScriptSrc="/lib/tinymce/tinymce.min.js" Conf="NetEvent.Client.Extensions.TinyMceConfig.EditorConf" />
                         </MudText>
                     </MudField>
